--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </a>
                 </li>
                 <li>
-                    <a id="resSig" href="#login" data-transition="fade" data-theme="" data-icon="arrow-r">
+                    <a id="resSig" href="#" data-transition="fade" data-theme="" data-icon="arrow-r">
                         Siguiente
                     </a>
                 </li>
