--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 <script src="js/API/eventos.js" type="text/javascript"></script>
 <script src="js/API/servidor.js" type="text/javascript"></script>
 <script src="js/API/captura.js" type="text/javascript"></script>
+<script src="js/API/archivos.js" type="text/javascript"></script>
 </head> 
 <body> 
 
 <div data-role="page" id="page">
 	<div data-role="header">
-		<h1>Hotel Quinta Inn</h1>
+		<h1>Hotel Inn</h1>
 	</div>
 	<div data-role="content">	
 		<ul data-role="listview" data-inset="true">
@@ -38,7 +39,7 @@
        data-icon="delete" data-iconpos="notext" class="ui-btn-right">Atras</a>
 	</div>
 	<div data-role="content" style="text-align:justify">	
-		La Quinta Inn & Suites Puebla Palmas modern building located at the Angelopolis, the main shopping area of Puebla, right in the Plaza Palmas and in front of the Angelopolis shopping center, surrounded by restaurants, entertainment centers, 2 minutes from the Centro Cultural and universities as the Tec de Monterrey, Universidad Ibero Americana and steps away from the new government offices.		
+		Inn & Suites Puebla Palmas modern building located at the Angelopolis, the main shopping area of Puebla, right in the Plaza Palmas and in front of the Angelopolis shopping center, surrounded by restaurants, entertainment centers, 2 minutes from the Centro Cultural and universities as the Tec de Monterrey, Universidad Ibero Americana and steps away from the new government offices.		
 	</div>
 </div>
 
