--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 <script src="js/API/servidor.js" type="text/javascript"></script>
 <script src="js/API/captura.js" type="text/javascript"></script>
 <script src="js/API/archivos.js" type="text/javascript"></script>
+<script src="js/API/dispositivo.js" type="text/javascript"></script>
+<script src="js/API/almacenamiento.js" type="text/javascript"></script>
 </head> 
 <body> 
 
 <div data-role="page" id="page">
 	<div data-role="header">
-		<h1>Hotel Inn</h1>
+		<h1>Hotel Inn</h1>        
 	</div>
 	<div data-role="content">	
 		<ul data-role="listview" data-inset="true">
